--- a/TODOS_React/my-app/src/components/Todos/Todo.module.css
+++ b/TODOS_React/my-app/src/components/Todos/Todo.module.css
@@ -18,7 +18,7 @@
 
 .completedTodo {
 
-    color: green;
+    color: dimgrey;
     text-decoration: line-through;
-    background-color: lightblue;
+    background-color: #4682B4;
 }
